Створює input-form для name

--- a/index.html
+++ b/index.html
@@ -73,7 +73,18 @@
                                 <use href="./images/icon/sprite.svg#modal-btn"></use>
                             </svg>
                         </button>
-                        <form class="modal-form"></form>
+                        <form class="modal-form">
+                            <h2 class="title title-form">Оставьте свои данные, мы вам перезвоним</h2>
+                            <div class="input-container">
+                                <input class="input-form" type="text" id="name" checked name="user-name">
+                                <label class="label-form" for="name">Имя</label>
+                                <svg class="input-icon" width="18" height="18" for="name">
+                                    <use href="./images/icon/sprite-form.svg#person"></use>
+                                </svg>
+                            </div>
+
+
+                        </form>
                     </div>
                 </div>
             </div>
