Створює textarea-form-comment

--- a/index.html
+++ b/index.html
@@ -73,15 +73,33 @@
                                 <use href="./images/icon/sprite.svg#modal-btn"></use>
                             </svg>
                         </button>
-                        <form class="modal-form">
+                        <form class="modal-form" name="form-order-service">
                             <h2 class="title title-form">Оставьте свои данные, мы вам перезвоним</h2>
                             <div class="input-container">
-                                <input class="input-form" type="text" id="name" checked name="user-name">
+                                <input class="input-form" type="text" id="name" name="user-name" minlength="3" checked>
                                 <label class="label-form" for="name">Имя</label>
                                 <svg class="input-icon" width="18" height="18" for="name">
                                     <use href="./images/icon/sprite-form.svg#person"></use>
                                 </svg>
                             </div>
+                            <div class="input-container">
+                                <input class="input-form" type="tel" id="phone" name="user-phone">
+                                <label class="label-form" for="phone">Телефон</label>
+                                <svg class="input-icon" width="18" height="18" for="phone">
+                                    <use href="./images/icon/sprite-form.svg#phone"></use>
+                                </svg>
+                            </div>
+                            <div class="input-container">
+                                <input class="input-form" type="email" id="email" name="user-email">
+                                <label class="label-form" for="email">Почта</label>
+                                <svg class="input-icon" width="18" height="18" for="email">
+                                    <use href="./images/icon/sprite-form.svg#emai"></use>
+                                </svg>
+                            </div>
+
+                            <label class="label-form-comment" for="comment">Комментарий</label>
+                            <textarea class="textarea-form-comment" id="comment" name="viewport"
+                                placeholder="Введите текст"></textarea>
 
 
                         </form>
