Створює footer-form

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="textarea-container">
                                 <label class="label-form-comment" for="comment">Комментарий</label>
-                                <textarea class="textarea-form-comment" id="comment" name="viewport"
+                                <textarea class="textarea-form-comment" id="comment" name="user-comment"
                                     placeholder="Введите текст"></textarea>
                             </div>
                             <!-- Політика приватності (чекбокс) -->
@@ -113,10 +113,7 @@
                                 Соглашаюсь с рассылкой и принимаю
                                 <a class="contract-form" href=""> Условия договора</a>
                             </label>
-
                             <button class="form-btn" type="submit">Отправить</button>
-
-
                         </form>
                     </div>
                 </div>
@@ -452,6 +449,17 @@
 
                     </ul>
                 </div>
+                <form class="footer-form" action="">
+                    <label class="label-footer" for="footer-form-email">Подпишитесь на рассылку</label>
+                    <input class="input-footer" type="email" id="footer-form-email" placeholder="E-mail">
+                    <button class="footer-btn-form" type="submit">
+                        Подписаться
+                        <svg width="24" height="24">
+                            <use href="./images/icon/"></use>
+                        </svg>
+                    </button>
+                </form>
+                <!-- <button></button> -->
             </div>
         </div>
     </footer>
