Корегує footer-form

--- a/index.html
+++ b/index.html
@@ -451,12 +451,15 @@
                 </div>
                 <form class="footer-form" action="">
                     <label class="label-footer" for="footer-form-email">Подпишитесь на рассылку</label>
-                    <input class="input-footer" type="email" id="footer-form-email" placeholder="E-mail">
-                    <button class="footer-btn-form" type="submit">
-                        Подписаться
-                        <svg width="24" height="24">
-                            <use href="./images/icon/"></use>
-                        </svg>
+                    <div class="input-btn-form-footer">
+                        <input class="input-footer" type="email" id="footer-form-email" placeholder="E-mail"
+                            name="user-subscription">
+                        <button class="footer-btn-form" type="submit">
+                            Подписаться
+                            <svg class="footer-btn-icon-form" width="24" height="24">
+                                <use href="./images/icon/sprite-form.svg#iconsend"></use>
+                            </svg>
+                    </div>
                     </button>
                 </form>
                 <!-- <button></button> -->
