--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
                             <h2 class="title title-form">Оставьте свои данные, мы вам перезвоним</h2>
                             <div class="input-container">
                                 <input class="input-form" type="text" id="name" name="user-name" placeholder=" "
-                                    minlength="3" checked>
+                                    minlength="3" required>
                                 <label class="label-form" for="name">Имя</label>
-                                <svg class="input-icon" width="18" height="18" for="name">
+                                <svg class="input-icon" width="18" height="18">
                                     <use href="./images/icon/sprite-form.svg#person"></use>
                                 </svg>
                             </div>
                             <div class="input-container">
                                 <input class="input-form" type="tel" id="phone" name="user-phone" placeholder=" ">
                                 <label class="label-form" for="phone">Телефон</label>
-                                <svg class="input-icon" width="18" height="18" for="phone">
+                                <svg class="input-icon" width="18" height="18">
                                     <use href="./images/icon/sprite-form.svg#phone"></use>
                                 </svg>
                             </div>
                             <div class="input-container">
                                 <input class="input-form" type="email" id="email" name="user-email" placeholder=" ">
                                 <label class="label-form" for="email">Почта</label>
-                                <svg class="input-icon" width="18" height="18" for="email">
+                                <svg class="input-icon" width="18" height="18">
                                     <use href="./images/icon/sprite-form.svg#emai"></use>
                                 </svg>
                             </div>
@@ -449,7 +449,7 @@
 
                     </ul>
                 </div>
-                <form class="footer-form" action="">
+                <form class="footer-form" name="form-subscription">
                     <label class="label-footer" for="footer-form-email">Подпишитесь на рассылку</label>
                     <div class="input-btn-form-footer">
                         <input class="input-footer" type="email" id="footer-form-email" placeholder="E-mail"
@@ -459,8 +459,8 @@
                             <svg class="footer-btn-icon-form" width="24" height="24">
                                 <use href="./images/icon/sprite-form.svg#iconsend"></use>
                             </svg>
+                        </button>
                     </div>
-                    </button>
                 </form>
                 <!-- <button></button> -->
             </div>
