Створює footer-form у Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -309,6 +309,20 @@
 
                     </ul>
                 </div>
+                <form class="footer-form" name="form-subscription">
+                    <label class="label-footer" for="footer-form-email">Подпишитесь на рассылку</label>
+                    <div class="input-btn-form-footer">
+                        <input class="input-footer" type="email" id="footer-form-email" placeholder="E-mail"
+                            name="user-subscription">
+                        <button class="footer-btn-form" type="submit">
+                            Подписаться
+                            <svg class="footer-btn-icon-form" width="24" height="24">
+                                <use href="./images/icon/sprite-form.svg#iconsend"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
+                <!-- <button></button> -->
             </div>
         </div>
     </footer>
